# AuditNetwork

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: detail.rs  graph.rs  health.rs  lib.rs  query.rs  recommend.rs  recommendations.rs  sessions.rs  ws.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: denormalise.rs  ingest.rs  lib.rs  parser.rs  redact.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: DEPLOY.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  cytoscape-extensions.d.ts  replay.ts  store.ts  styles.css
frontend/src/components/: DetailPanel.tsx  GraphCanvas.tsx  Recommendations.tsx  Scrubber.tsx  Sidebar.tsx
infra/terraform/common/: cloud-init.yaml.tftpl  variables.tf
infra/terraform/hetzner/: main.tf  terraform.tfvars.example
infra/terraform/ovh/: main.tf  terraform.tfvars.example
infra/terraform/scaleway/: main.tf  terraform.tfvars.example
migrations/: 0001_init.sql  0002_views.sql
queries/: Q01_hot_files.sql  Q02_file_thrash_per_session.sql  Q03_tool_mix_per_session.sql  Q04_subagent_roi.sql  Q05_webfetch_hotspots.sql  Q06_bash_repetition.sql  Q07_cache_hit_ratio.sql  Q08_weighted_cost_per_session.sql  Q09_time_to_first_edit.sql  Q10_read_write_ratio.sql  Q11_search_then_read.sql  Q12_todo_completion.sql  Q13_plan_to_implementation_latency.sql  Q14_repeated_failed_bash.sql  Q15_edit_then_revert.sql  Q16_webfetch_error_rate_per_host.sql  Q17_orphan_tool_calls.sql  Q18_compactions.sql  Q19_permission_denials.sql  Q20_attractor_files.sql  Q21_co_edit_pairs.sql  Q22_tool_mix_across_versions.sql  Q23_history_for_file.sql  Q24_bash_in_cwd.sql  Q25_urls_by_host.sql  Q26_secret_path_touches.sql  README.md
