[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
time = { workspace = true }
hex.workspace = true
futures-util = "0.3"
store.workspace = true
