[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "auditnetwork"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true
dirs.workspace = true
hex.workspace = true
axum.workspace = true
tower-http.workspace = true
ingest.workspace = true
store.workspace = true
