[package]
name = "ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
sqlx.workspace = true
tracing.workspace = true
tokio.workspace = true
url.workspace = true
regex.workspace = true
once_cell.workspace = true
model.workspace = true
store.workspace = true
